--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = "^3.11"
 dependencies = [
     "torch (>=2.7.1,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
+    "pathlib (>=1.0.1,<2.0.0)"
 ]
 
 
